[package]
name = "cyclonedx-rs-gem"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
quick-xml = { version = "0.38.4", features = ["serialize"] }
regex = "1.12.2"
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["std"] }
tokio = { version = "1.48.0", features = ["macros", "rt"] }
futures = "0.3"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
reqwest-retry = "0.8.0"
reqwest-middleware = "0.4.2"
thiserror = "2.0.17"
url = "2.5.7"
