[package]
name = "cyclonedx-rs-gem"
version = "0.4.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
quick-xml = { version = "0.39.0", features = ["serialize"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["std"] }
tokio = { version = "1.49.0", features = ["macros", "rt"] }
futures = "0.3"
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
thiserror = "2.0.18"
url = "2.5.8"
